#310 - Refactoring on the debug endpoint.